mobile-device test

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -75,15 +75,37 @@ body {
 
 }
 
-@media (max-width: 375px) {
+@media (max-width: 425px) {
 
   #content {
-    margin-top: 80%;
+    background-color: #FFF;
+    width: 30rem;
+    height: 45rem;
+    border-radius: 2rem;
+    box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.2);
   }
 
   body {
     background-image: url(pattern-background-mobile.svg);
-    background-size: 50rem;
+    background-size: 25rem;
+
+  }
+
+}
+
+@media (max-width: 375px) {
+
+  #content {
+    background-color: #FFF;
+    width: 30rem;
+    height: 45rem;
+    border-radius: 2rem;
+    box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.2);
+  }
+
+  body {
+    background-image: url(pattern-background-mobile.svg);
+    background-size: 25rem;
 
   }
 
