--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -32,6 +32,11 @@ body {
   background-image: url(pattern-background-desktop.svg);
   background-size: 100% 35rem;
   background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
 
 }
 
@@ -46,12 +51,11 @@ body {
   height: 45rem;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 7%;
   border-radius: 2rem;
   box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.2);
 }
 
-@media (max-width: 1440px) {
+/* @media (max-width: 1440px) {
 
   #content {
     margin-top: 10%;
@@ -79,7 +83,7 @@ body {
 
   #content {
     background-color: #FFF;
-    width: 30rem;
+    width: 25rem;
     height: 45rem;
     border-radius: 2rem;
     box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.2);
@@ -109,7 +113,7 @@ body {
 
   }
 
-}
+} */
 
 #content > img {
   border-radius: 2rem 2rem 0 0;
