--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -55,65 +55,19 @@ body {
   box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.2);
 }
 
-/* @media (max-width: 1440px) {
-
-  #content {
-    margin-top: 10%;
-  }
-
-}
-
-@media (max-width: 1024px) {
-
-  #content {
-    margin-top: 15%;
-  }
-
-}
-
-@media (max-width: 768px) {
-
-  #content {
-    margin-top: 20%;
-  }
-
-}
-
-@media (max-width: 425px) {
-
-  #content {
-    background-color: #FFF;
-    width: 25rem;
-    height: 45rem;
-    border-radius: 2rem;
-    box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.2);
-  }
+@media (min-width: 768px) {
 
   body {
     background-image: url(pattern-background-mobile.svg);
-    background-size: 25rem;
+    height: 50vh;
 
+  }
+
+  #content {
+    width: 500px;
   }
 
 }
-
-@media (max-width: 375px) {
-
-  #content {
-    background-color: #FFF;
-    width: 30rem;
-    height: 45rem;
-    border-radius: 2rem;
-    box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.2);
-  }
-
-  body {
-    background-image: url(pattern-background-mobile.svg);
-    background-size: 25rem;
-
-  }
-
-} */
 
 #content > img {
   border-radius: 2rem 2rem 0 0;
