--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -122,7 +122,7 @@ body {
   color: hsl(245, 75%, 52%);
   position: absolute;
   left: 19rem;
-  top: 1.5rem;
+  top: .5rem;
   text-decoration: underline;
 }
 
